# FocusDAW-Studio

./: (승룡)해야할일.txt  .gitignore  BPM_SHIFTER.html  Export절차.md  README.md  advanced-ambience-app.jsx  advanced-ambience.html  advanced-eq-app.jsx  advanced-eq.html  advanced-pan-app.jsx  advanced-pan.html  app.jsx  app_jsx_diff.txt  audio-bridge.js  audio-engine.js  help.html  log.txt  main.js  mixer-app.jsx  mixer.html  package-lock.json  package.json  scratch_test_meyda.js  start.bat  studio.html  ui-dialogs.jsx  ui-help.jsx  ui-kit.jsx  ui-mixer.jsx  ui-tracks.jsx  variations.html  version.js  개발-프로세스-아카이브.md  개발-프로세스.md  버그.md  보컬-채널-스트립-설계.md  성능가이드.md  수정요청.md  시험-아카이브.md  시험.md  (+4 more)
juce_skeleton/: CMakeLists.txt  build_native.bat
juce_skeleton/Source/: AudioEngine.cpp  AudioEngine.h  Logging.h  Main.cpp  WebSocketServer.cpp  WebSocketServer.h
juce_skeleton/build_asan/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FocusDAW-AudioEngine.slnx  FocusDAW-AudioEngine.vcxproj  FocusDAW-AudioEngine.vcxproj.filters  FocusDAW-AudioEngine_rc_lib.vcxproj  FocusDAW-AudioEngine_rc_lib.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
juce_skeleton/build_asan/FocusDAW-AudioEngine.dir/Release/: FocusDAW-AudioEngine.exe.recipe
juce_skeleton/build_asan/FocusDAW-AudioEngine_artefacts/JuceLibraryCode/: Info.txt
juce_skeleton/build_asan/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.slnx  cmake_install.cmake
juce_skeleton/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
juce_skeleton/build_ninja/JUCE/: cmake_install.cmake
(+116 files in other folders)
